Structure and Comment is ready

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "api.videos",
     "api.auth",
     "api.gateway",
+    "api.comments",
     "client.reactNative",
     "database",
     "documentation"
