--- a/reeltok.api/reeltok.api.gateway/GatewayService.csproj
+++ b/reeltok.api/reeltok.api.gateway/GatewayService.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="xunit" Version="2.9.3" />
   </ItemGroup>
 
 </Project>
