--- a/reeltok.api/reeltok.api.gateway/.vscode/tasks.json
+++ b/reeltok.api/reeltok.api.gateway/.vscode/tasks.json
@@ -7,7 +7,7 @@
       "type": "process",
       "args": [
         "build",
-        "${workspaceFolder}/GatewayService.sln",
+        "${workspaceFolder}/GatewayServiceApi.sln",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary;ForceNoAlign"
       ],
@@ -33,7 +33,7 @@
         "watch",
         "run",
         "--project",
-        "${workspaceFolder}/GatewayService.sln"
+        "${workspaceFolder}/GatewayServiceApi.sln"
       ],
       "problemMatcher": "$msCompile"
     }
