--- a/reeltok.api/reeltok.api.auth/.vscode/tasks.json
+++ b/reeltok.api/reeltok.api.auth/.vscode/tasks.json
@@ -7,7 +7,7 @@
       "type": "process",
       "args": [
         "build",
-        "${workspaceFolder}/AuthService.sln",
+        "${workspaceFolder}/AuthServiceApi.sln",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary;ForceNoAlign"
       ],
@@ -19,7 +19,7 @@
       "type": "process",
       "args": [
         "publish",
-        "${workspaceFolder}/AuthService.sln",
+        "${workspaceFolder}/AuthServuceApi.sln",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary;ForceNoAlign"
       ],
@@ -33,7 +33,7 @@
         "watch",
         "run",
         "--project",
-        "${workspaceFolder}/AuthService.sln"
+        "${workspaceFolder}/AuthServuceApi.sln"
       ],
       "problemMatcher": "$msCompile"
     }
