--- a/reeltok.api/reeltok.api.auth/AuthServiceApi.csproj
+++ b/reeltok.api/reeltok.api.auth/AuthServiceApi.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
-    <StartupObject>AuthService.Program</StartupObject>
+    <StartupObject>AuthServiceApi.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
