--- a/reeltok.api/reeltok.api.users/UsersService.csproj
+++ b/reeltok.api/reeltok.api.users/UsersService.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
-    <StartupObject>UsersService.Program</StartupObject>
+    <StartupObject>UsersServiceApi.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
