feat(api.users): :art: A few new code lines

--- a/reeltok.api/reeltok.api.users/UsersServiceApi.csproj
+++ b/reeltok.api/reeltok.api.users/UsersServiceApi.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
     <StartupObject>UsersServiceApi.Program</StartupObject>
+    <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
