--- a/reeltok.client/reeltok.client.reactNative/package.json
+++ b/reeltok.client/reeltok.client.reactNative/package.json
@@ -13,10 +13,12 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "expo": "~52.0.26",
+    "expo-file-system": "^18.0.10",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-web": "^0.19.13",
+    "react-native-xml2js": "^1.0.3",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
