--- a/reeltok.client/reeltok.client.reactNative/tsconfig.json
+++ b/reeltok.client/reeltok.client.reactNative/tsconfig.json
@@ -1,6 +1,14 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "jsx": "react-native",
+    "module": "commonjs",
+    "target": "es6",
+    "lib": ["es6"],
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noImplicitAny": true
   }
 }
