style(api.users): :memo: Create enpoint is working and fixed some naming issues

--- a/reeltok.api/reeltok.api.users/UsersServiceApi.csproj
+++ b/reeltok.api/reeltok.api.users/UsersServiceApi.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
     <StartupObject>UsersServiceApi.Program</StartupObject>
-    <InvariantGlobalization>false</InvariantGlobalization>
+    <InvariantGlobalization>false</InvariantGlobalization>  <!-- This is to make it connect with the database for ef -->
   </PropertyGroup>
 
   <ItemGroup>
