fixing merge issues

--- a/reeltok.api/reeltok.api.auth/appsettings.json
+++ b/reeltok.api/reeltok.api.auth/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "AuthDb": "server=tcp:localhost,1433;database=AuthDb;user=AuthService;password=Kode1234!;TrustServerCertificate=true"
+  },
+  "JWTSettings": {
+    "SecretKey": "testkey",
+    "Issuer": "Reeltok",
+    "Audience": "Reeltok-User"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
