--- a/reeltok.client/reeltok.client.reactNative/package.json
+++ b/reeltok.client/reeltok.client.reactNative/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "expo": "~52.0.26",
@@ -19,7 +20,8 @@
     "react-native": "0.76.6",
     "react-native-web": "^0.19.13",
     "react-native-xml2js": "^1.0.3",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "@expo/vector-icons": "^14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
