refactor(api.auth): :recycle: Started refactoring code from the Auth API

--- a/reeltok.api/reeltok.api.auth/appsettings.json
+++ b/reeltok.api/reeltok.api.auth/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AuthDb": "server=tcp:localhost,1433;database=AuthDb;user=AuthService;password=Kode1234!;TrustServerCertificate=true"
+    "AuthDb": "Data Source=MSI;Initial Catalog=AuthDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "JWTSettings": {
     "SecretKey": "testkey",
