refactor(api.auth): :recycle: Almost done refactoring the Auth Api

--- a/reeltok.api/reeltok.api.auth/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.auth/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "AuthDb": "Data Source=MSI;Initial Catalog=AuthDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "AuthDb": "Server=MAGNUSLUND\\SQLEXPRESS;Database=AuthDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "JWTSettings": {
-    "SecretKey": "testkey",
+    "SecretKey": "VerySecretKeyyyy",
     "Issuer": "Reeltok",
     "Audience": "Reeltok-User"
   },
