feat(api.auth): :construction: work in progress fixing XML issues in controller

--- a/reeltok.api/reeltok.api.auth/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.auth/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AuthDb": "Server=MAGNUSLUND\\SQLEXPRESS;Database=AuthDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "AuthDb": "Server=MSI\\SQLEXPRESS;Database=AuthDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "JWTSettings": {
     "SecretKey": "VerySecretKeyyyy",
