--- a/reeltok.api/reeltok.api.auth/AuthServiceApi.csproj
+++ b/reeltok.api/reeltok.api.auth/AuthServiceApi.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.3.0" />
       <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.2">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
