feat(api.auth): :construction: Progressed with adding Auth functionality. Overall improvement of the API.

--- a/reeltok.api/reeltok.api.auth/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.auth/appsettings.Development.json
@@ -4,8 +4,8 @@
   },
   "JWTSettings": {
     "SecretKey": "VerySecretKeyyyy",
-    "Issuer": "Reeltok",
-    "Audience": "Reeltok-User"
+    "Issuer": "ReelTok",
+    "Audience": "ReelTok-User"
   },
   "Logging": {
     "LogLevel": {
