--- a/reeltok.client/reeltok.client.reactNative/package.json
+++ b/reeltok.client/reeltok.client.reactNative/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "expo": "~52.0.26",
     "expo-file-system": "^18.0.10",
+    "expo-image-picker": "^16.0.6",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
