--- a/reeltok.client/reeltok.client.reactNative/package.json
+++ b/reeltok.client/reeltok.client.reactNative/package.json
@@ -11,17 +11,24 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "expo": "~52.0.26",
+    "expo-constants": "~17.0.5",
     "expo-file-system": "^18.0.10",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-web": "^0.19.13",
     "react-native-xml2js": "^1.0.3",
     "react-query": "^3.39.3",
-    "@expo/vector-icons": "^14.0.2"
+    "expo-video": "~2.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
