--- a/reeltok.client/reeltok.client.reactNative/package.json
+++ b/reeltok.client/reeltok.client.reactNative/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "expo": "~52.0.26",
+    "expo-camera": "^16.0.16",
     "expo-file-system": "^18.0.10",
     "expo-image-picker": "^16.0.6",
     "expo-status-bar": "~2.0.1",
