--- a/reeltok.api/reeltok.api.comments/CommentsService.csproj
+++ b/reeltok.api/reeltok.api.comments/CommentsService.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <StartupObject>CommentsServiceApi.Program</StartupObject>
+    <StartupObject>reeltok.api.comments.Program</StartupObject>
     <InvariantGlobalization>false</InvariantGlobalization>  <!-- This is to make it connect with the database for ef -->
   </PropertyGroup>
 
