--- a/reeltok.api/reeltok.api.comments/appsettings.json
+++ b/reeltok.api/reeltok.api.comments/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=SHIZ;Initial Catalog=LocalCommentDbTest;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
