feat(api.videos): :sparkles: Continued working on the VideosServiceApi

--- a/reeltok.api/reeltok.api.videos/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.videos/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
+  "ConnectionStrings": {
+    "VideosDb": "Server=MSI\\SQLEXPRESS;Database=VideosDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "FileServer": {
+    "Directory": "C:/ReelTok/Videos",
+    "Username": "VideoServiceApi",
+    "Password": "VerySecurePassword"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
