feat(api.videos): :sparkles: Added tests and StorageService functionality, along with minor refactoring

--- a/reeltok.api/reeltok.api.videos/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.videos/appsettings.Development.json
@@ -1,9 +1,10 @@
 {
   "ConnectionStrings": {
-    "VideosDb": "Server=MSI\\SQLEXPRESS;Database=VideosDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "VideosDb": "Server=MagnusLund\\SQLEXPRESS;Database=VideosDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "FileServer": {
-    "Directory": "C:/ReelTok/Videos",
+    "Hostname": "127.0.0.1",
+    "Directory": "C:/ReelTok/Videos/",
     "Username": "VideoServiceApi",
     "Password": "VerySecurePassword"
   },
