fix(api.comments): :bug: Resolved configuration issues related to launch.json dependencies

--- a/reeltok.api/reeltok.api.comments/Properties/launchSettings.json
+++ b/reeltok.api/reeltok.api.comments/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:24817",
+      "applicationUrl": "http://localhost:52816",
       "sslPort": 0
     }
   },
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5012",
+      "applicationUrl": "https://localhost:5005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
