build(client.reactNative): :art: WIP handling "common" directory assets

--- a/reeltok.client/reeltok.client.reactNative/app.json
+++ b/reeltok.client/reeltok.client.reactNative/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
     "plugin": [
-      "expo-image-picker",{
+      "expo-image-picker",
+      {
         "photosPermission": "The app accesses your photos to let you upload videos."
       }
     ],
@@ -9,11 +10,9 @@
     "slug": "the_reeltok_client",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -22,17 +21,11 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
-    
     },
-    
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      "expo-video"
-    ]
+
+    "web": {},
+    "plugins": ["expo-video"]
   }
 }
