feat(api.recommendations): :art: Integrated Dependency Injection and updated the .csproj file for database connectivity

--- a/reeltok.api/reeltok.api.recommendations/RecommendationsServiceApi.csproj
+++ b/reeltok.api/reeltok.api.recommendations/RecommendationsServiceApi.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
     <StartupObject>RecommendationsServiceApi.Program</StartupObject>
+    <InvariantGlobalization>false</InvariantGlobalization>  <!-- This is to make it connect with the database for ef -->
   </PropertyGroup>
 
   <ItemGroup>
