--- a/reeltok.client/reeltok.client.reactNative/tsconfig.json
+++ b/reeltok.client/reeltok.client.reactNative/tsconfig.json
@@ -9,6 +9,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "strict": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "types": ["node"]
   }
 }
