--- a/reeltok.client/reeltok.client.reactNative/package.json
+++ b/reeltok.client/reeltok.client.reactNative/package.json
@@ -7,7 +7,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web --port 4000"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
@@ -36,11 +36,15 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "^0.19.13",
     "react-native-xml2js": "^1.0.3",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/xml2js": "^0.4.14",
     "typescript": "^5.3.3"
   },
   "private": true
