--- a/reeltok.client/reeltok.client.reactNative/package.json
+++ b/reeltok.client/reeltok.client.reactNative/package.json
@@ -46,7 +46,8 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
     "@types/xml2js": "^0.4.14",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "xml-loader": "^1.2.1"
   },
   "private": true
 }
