--- a/reeltok.client/reeltok.client.reactNative/package.json
+++ b/reeltok.client/reeltok.client.reactNative/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -20,8 +21,8 @@
     "axios": "^1.7.9",
     "expo": "~52.0.26",
     "expo-blur": "^14.0.3",
-    "expo-constants": "~17.0.5",
     "expo-camera": "^16.0.16",
+    "expo-constants": "~17.0.5",
     "expo-file-system": "^18.0.10",
     "expo-image-picker": "^16.0.6",
     "expo-status-bar": "~2.0.1",
@@ -33,8 +34,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "^0.19.13",
     "react-native-xml2js": "^1.0.3",
-    "react-query": "^3.39.3",
-    "@expo/metro-runtime": "~4.0.1"
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
