--- a/reeltok.client/reeltok.client.reactNative/package.json
+++ b/reeltok.client/reeltok.client.reactNative/package.json
@@ -27,6 +27,7 @@
     "expo-file-system": "~18.0.11",
     "expo-font": "^13.0.4",
     "expo-image-picker": "^16.0.6",
+    "expo-linear-gradient": "^14.0.2",
     "expo-sensors": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "expo-video": "~2.0.5",
