--- a/reeltok.client/reeltok.client.reactNative/package.json
+++ b/reeltok.client/reeltok.client.reactNative/package.json
@@ -41,6 +41,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "reselect": "^5.1.1",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
