feat(client.reactNative): :sparkles: camera works like its supposed to

--- a/reeltok.client/reeltok.client.reactNative/app.json
+++ b/reeltok.client/reeltok.client.reactNative/app.json
@@ -22,10 +22,12 @@
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.the_reeltok_client"
     },
-
     "web": {},
-    "plugins": ["expo-video"]
+    "plugins": [
+      "expo-video"
+    ]
   }
 }
