fix(api.videos): :bug: Removed redlines from the refactoring, 2 weeks ago

--- a/reeltok.api/reeltok.api.videos/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.videos/appsettings.Development.json
@@ -3,10 +3,10 @@
     "VideosDb": "Server=MagnusLund\\SQLEXPRESS;Database=VideosDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "FileServer": {
-    "Hostname": "127.0.0.1",
-    "Directory": "C:/ReelTok/Videos/",
-    "Username": "VideoServiceApi",
-    "Password": "VerySecurePassword"
+    "Hostname": "172.17.0.2",
+    "Directory": "",
+    "Username": "sambauser",
+    "Password": "password"
   },
   "Logging": {
     "LogLevel": {
