feat(api.videos): :sparkles: Added controller functionality to the Videos API and also switched from SMB file sharing to an FTP server instead

--- a/reeltok.api/reeltok.api.videos/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.videos/appsettings.Development.json
@@ -3,10 +3,13 @@
     "VideosDb": "Server=MagnusLund\\SQLEXPRESS;Database=VideosDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "FileServer": {
-    "Hostname": "172.17.0.2",
-    "Directory": "",
-    "Username": "sambauser",
-    "Password": "password"
+    "Hostname": "localhost",
+    "Directory": "videos",
+    "Username": "VideosService",
+    "Password": "SecurePassw0rd"
+  },
+  "FFmpeg": {
+    "Path": "/usr/bin/ffmpeg"
   },
   "Logging": {
     "LogLevel": {
