feat(api.videos): :sparkles: Added upload video functionality

--- a/reeltok.api/reeltok.api.videos/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.videos/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "VideosDb": "Server=MagnusLund\\SQLEXPRESS;Database=VideosDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "VideosDb": "Server=localhost,1433;Database=VideosDb;User Id=SA;Password=@YeOZdbs8g4qey5;TrustServerCertificate=True;"
   },
   "FileServer": {
     "Hostname": "localhost",
