feat(api.videos): :sparkles: Added addLike functionality and rewrote HttpService to use JSON instead of html

--- a/reeltok.api/reeltok.api.users/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.users/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "UsersDb": "Server=localhost,1433;Database=UsersDb;User Id=SA;Password=@YeOZdbs8g4qey5;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
