--- a/reeltok.client/reeltok.client.reactNative/app.json
+++ b/reeltok.client/reeltok.client.reactNative/app.json
@@ -9,7 +9,6 @@
     "name": "the_reeltok_client",
     "slug": "the_reeltok_client",
     "version": "1.0.0",
-    "orientation": "portrait",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -26,8 +25,6 @@
       "package": "com.anonymous.the_reeltok_client"
     },
     "web": {},
-    "plugins": [
-      "expo-video"
-    ]
+    "plugins": ["expo-video"]
   }
 }
