--- a/reeltok.client/reeltok.client.reactNative/app.json
+++ b/reeltok.client/reeltok.client.reactNative/app.json
@@ -9,7 +9,6 @@
     "name": "the_reeltok_client",
     "slug": "the_reeltok_client",
     "version": "1.0.0",
-    "orientation": "portrait",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -27,7 +26,13 @@
     },
     "web": {},
     "plugins": [
-      "expo-video"
+      "expo-video",
+      [
+        "expo-screen-orientation",
+        {
+          "initialOrientation": "PORTRAIT"
+        }
+      ]
     ]
   }
 }
