--- a/reeltok.api/reeltok.api.videos/Properties/launchSettings.json
+++ b/reeltok.api/reeltok.api.videos/Properties/launchSettings.json
@@ -1,4 +1,11 @@
 ﻿{
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:5002/"
+      }
+    }
+  },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
