--- a/reeltok.api/reeltok.api.users/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.users/appsettings.Development.json
@@ -2,6 +2,14 @@
   "ConnectionStrings": {
     "UsersDb": "Server=localhost,1433;Database=UsersDb;User Id=SA;Password=@YeOZdbs8g4qey5;TrustServerCertificate=True;"
   },
+  "Microservices": {
+    "AuthApi": {
+      "Url": "http://localhost:5003/api"
+    },
+    "RecommendationsApi": {
+      "Url": "http://localhost:5004/api"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
