feat(api.users): :sparkles: Added functionality to upload a profile picture, for a user

--- a/reeltok.api/reeltok.api.users/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.users/appsettings.Development.json
@@ -16,5 +16,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "FileServer": {
+    "Hostname": "localhost",
+    "Directory": "profilePictures",
+    "Username": "UsersService",
+    "Password": "SecurePassw0rd"
+  },
   "AllowedHosts": "*"
 }
