--- a/reeltok.api/reeltok.api.users/UsersServiceApi.csproj
+++ b/reeltok.api/reeltok.api.users/UsersServiceApi.csproj
@@ -25,7 +25,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Microsoft.TestPlatform" Version="17.12.0" />
-    <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="Moq" Version="4.20.72" />    
+    <PackageReference Include="SSH.NET" Version="2024.2.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
