refactor: :recycle: Refactored video api and other apis that integrate with the videos api

--- a/reeltok.api/reeltok.api.videos/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.videos/appsettings.Development.json
@@ -2,6 +2,14 @@
   "ConnectionStrings": {
     "VideosDb": "Server=localhost,1433;Database=VideosDb;User Id=SA;Password=@YeOZdbs8g4qey5;TrustServerCertificate=True;"
   },
+  "Microservices": {
+    "UsersApi": {
+      "Url": "http://localhost:5001/api"
+    },
+    "RecommendationsApi": {
+      "Url": "http://localhost:5004/api"
+    }
+  },
   "FileServer": {
     "Hostname": "localhost",
     "Directory": "videos",
