refactor(api.recommendations): :recycle: Updated DTOs and controllers

--- a/reeltok.api/reeltok.api.recommendations/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.recommendations/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RecommendationsDb": "Server=localhost,1433;Database=RecommendationsDb;User Id=SA;Password=@YeOZdbs8g4qey5;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
