--- a/reeltok.api/reeltok.api.comments/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.comments/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "CommentsDb": "Server=localhost,1433;Database=CommentsDb;User Id=SA;Password=@YeOZdbs8g4qey5;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
