refactor(api.auth): :recycle: Finished refactoring Auth API

--- a/reeltok.api/reeltok.api.auth/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.auth/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AuthDb": "Server=MAGNUSLUND\\SQLEXPRESS;Database=AuthDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "AuthDb": "Server=localhost,1433;Database=AuthDb;User Id=SA;Password=@YeOZdbs8g4qey5;TrustServerCertificate=True;"
   },
   "JWTSettings": {
     "SecretKey": "VerySecretKeyyyy",
