refactor(api.gateway): :recycle: Finished refactoring videos service in gateway api

--- a/reeltok.api/reeltok.api.gateway/appsettings.Development.json
+++ b/reeltok.api/reeltok.api.gateway/appsettings.Development.json
@@ -6,13 +6,13 @@
     "VideosApi": {
       "Url": "http://localhost:5002/api"
     },
-    "Auth": {
+    "AuthApi": {
       "Url": "http://localhost:5003/api"
     },
     "RecommendationsApi": {
       "Url": "http://localhost:5004/api"
     },
-    "Comments": {
+    "CommentsApi": {
       "Url": "http://localhost:5005/api"
     }
   },
