--- a/reeltok.client/reeltok.client.reactNative/package.json
+++ b/reeltok.client/reeltok.client.reactNative/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "@shopify/flash-list": "1.7.3",
     "axios": "^1.7.9",
     "expo": "~52.0.26",
     "expo-asset": "~11.0.4",
@@ -29,6 +30,7 @@
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-location": "~18.0.7",
+    "expo-screen-orientation": "~8.0.4",
     "expo-sensors": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "expo-video": "~2.0.5",
@@ -43,9 +45,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "reselect": "^5.1.1",
-    "xml2js": "^0.6.2",
-    "expo-screen-orientation": "~8.0.4",
-    "@shopify/flash-list": "1.7.3"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
