nginx thumbnail fix

--- a/reeltok.docker/config/nginx/nginx.conf
+++ b/reeltok.docker/config/nginx/nginx.conf
@@ -12,18 +12,19 @@ http {
         }
 
         location ~ ^/videos/([^/]+)/(.+)$ {
-            root /usr/share/nginx/html;  
+            root /usr/share/nginx/html;
             autoindex off;
             types {
                 video/mp4 mp4;
                 video/mkv mkv;
                 video/mov mov;
+                image/jpeg jpeg jpg JPG; # Allow .JPG (uppercase)
             }
             add_header Access-Control-Allow-Origin *;
             add_header Cache-Control "public, max-age=31536000";
             try_files $uri =404;
         }
-
+        
         location ~ ^/profiles/([^/]+)/$ {
             return 403;
         }
